<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:behavior_peekHeight="40dp"
    android:id="@+id/botton_layout"
    android:background="@drawable/bg_buttom_sheet"
    app:layout_behavior="@string/bottom_sheet_behavior"

    >

    <TextView
        android:id="@+id/bottom_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/averia_gruesa_libre"
        android:includeFontPadding="false"
        android:text="@string/Click_me"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
 />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="horizontal"
    >
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <View
            android:id="@+id/viewColor1"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_note_color"/>
        <ImageView
            android:id="@+id/imageColor1"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_baseline_done_24"
            app:tint="@color/white" />

        
    </FrameLayout>
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <View
            android:id="@+id/viewColor2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_note_color2"/>
        <ImageView
            android:id="@+id/imageColor2"
            android:layout_width="45dp"
            android:layout_height="45dp"

            app:tint="@color/white" />


    </FrameLayout>
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <View
            android:id="@+id/viewColor3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_note_color3"/>
        <ImageView
            android:id="@+id/imageColor3"
            android:layout_width="45dp"
            android:layout_height="45dp"

            app:tint="@color/white" />


    </FrameLayout>
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <View
            android:id="@+id/viewColor4"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_note_color4"/>
        <ImageView
            android:id="@+id/imageColor4"
            android:layout_width="45dp"
            android:layout_height="45dp"

            app:tint="@color/white" />


    </FrameLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pick_color"
        android:textColor="@color/white"
        android:includeFontPadding="false"
        android:textSize="13sp"
        android:fontFamily="@font/averia_gruesa_libre"
        />


</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical">
        <ImageView
        android:id="@+id/add_img"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:src="@drawable/ic_baseline_image_24"
        app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/averia_gruesa_libre"
            android:text="@string/Add_image"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/delete_img1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/delete_img"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:src="@drawable/ic_baseline_delete_24"
             />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/averia_gruesa_libre"
            android:text="@string/Delete_Note"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>
</LinearLayout>